--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ img {
 
 /* responsive */
 @media screen and ( max-width: 480px) {
-
+  /* row1 */
   body {
     max-width: 480px;
   }
@@ -90,18 +90,42 @@ img {
     font-size: 40px;
   }
 
+  #lezioni img {
+    width: 50%;
+    height: 50%;
+  }
+
   #lezioni .row>.left,
   #lezioni .row>.right {
     width: 100%;
     margin: 1% 1%;
     float: none;
     font-size: 30px;
+    padding-bottom: 10%;
   }
 
   #lezioni .row>.left h3,
   #lezioni .row>.right h3 {
     color: red;
   }
+  /* /row1 */
+
+  /* row2 */
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    float: none;
+    width: calc((100% / 2) - 18px);
+    padding: 1% 2%;
+    display: inline-block;
+  }
+
+    #steps img {
+      width: 50%;
+      height: 50%;
+    }
+
+  /* /row2 */
 
 
 }
