--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ img {
   body {
     max-width: 768px;
     font-size: 20px;
+    background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v462-n-130-textureidea_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9465282a2b0a375f4f5b120d7bbad882);
+    color: white;
+
   }
 
   h1 {
@@ -100,6 +103,10 @@ img {
     margin-top: 50px;
   }
 
+  #lezioni .container {
+    background-color: rgba(0, 0, 0, 0.0);
+  }
+
   #lezioni .row>.left,
   #lezioni .row>.right {
     width: 45%;
@@ -109,6 +116,9 @@ img {
     padding-top: 20px;
   }
 
+  .container.grey {
+    background-color: rgba(0, 0, 0, 0.0);
+  }
 
   #steps .row>.left,
   #steps .row>.central,
